# Granite-MicroSamples

./: 01_device_creation.cpp  02_object_creation.cpp  03_frame_contexts.cpp  04_shaders_and_programs.cpp  05_descriptor_sets_and_binding_model.cpp  06_wsi_sdl2.cpp  07_linear_allocators.cpp  08_render_passes.cpp  09_synchronization.cpp  10_pipelines.cpp  CMakeLists.txt  README.md  checkout_submodules.sh
shaders/: Makefile  gbuffer.frag  gbuffer.frag.inc  gbuffer.vert  gbuffer.vert.inc  lighting.frag  lighting.frag.inc  lighting.vert  lighting.vert.inc  simple.comp  simple.comp.inc  simple.frag  simple.frag.inc  simple.vert  simple.vert.inc  triangle.frag  triangle.frag.inc  triangle.vert  triangle.vert.inc
